--- a/src/styles.css
+++ b/src/styles.css
@@ -9,9 +9,9 @@
 
   /*  vista principal */
   body {
-    background-color: #1a9ba796; /* Color esmeralda */
+    background-color: #1a9ba796; 
     margin: 0;
-    font-family: Arial, sans-serif; /* Opcional, para definir la fuente */
+    font-family: Arial, sans-serif; 
   }
   
   .container {
@@ -20,32 +20,32 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh; /* Asegura que el contenido ocupe toda la altura de la pantalla */
+    min-height: 100vh; 
   }
   
 
   .image-container {
     display: flex;
-    justify-content: center; /* Centra horizontalmente */
-    align-items: center; /* Centra verticalmente */
-    gap: 20px; /* Espacio entre imágenes */
+    justify-content: center; 
+    align-items: center; 
+    gap: 20px;
     padding: 20px;
   }
   
   .image-container img {
     width: 289px;
-    height: auto; /* Mantiene la proporción de la imagen */
-    transition: transform 0.3s ease; /* Efecto de transición */
+    height: auto; 
+    transition: transform 0.3s ease; 
   }
   
   /* Estilo específico para la imagen 'tre' */
   .image-container img.img-tre {
-    width: 429px; /* Ajusta el tamaño específico para 'tre' */
+    width: 429px; 
   }
   
   /* Estilo específico para la imagen 'pik' */
   .image-container img.img-pik {
-    width: 429px; /* Ajusta el tamaño específico para 'pik' */
+    width: 429px; 
   }
   
   .image-container img:hover {
